<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:drawableLeft="@drawable/ic_friend"
            android:drawablePadding="17dp"
            style="@style/TextSNSMangeBig"
            android:text="@string/following"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/sns_manager_layout_margin"
            android:gravity="center_vertical|left">

            <LinearLayout
                android:id="@+id/ll_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical|left"/>

            <Button
                android:id="@+id/btn_following_more"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_add" />
        </LinearLayout>

        <View android:layout_width="match_parent" android:layout_height="1dp"
            android:layout_marginLeft="@dimen/sns_manager_layout_margin" android:background="@color/line_color_list_divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="16dp"
            android:drawableLeft="@drawable/ic_friend"
            android:drawablePadding="17dp"
            style="@style/TextSNSMangeBig"
            android:text="@string/follower"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/sns_manager_layout_margin"
            android:gravity="center_vertical|left">

            <LinearLayout
                android:id="@+id/ll_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical|left"/>

            <Button
                android:id="@+id/btn_follower_more"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_add" />
        </LinearLayout>

        <View android:layout_width="match_parent" android:layout_height="1dp"
            android:layout_marginLeft="@dimen/sns_manager_layout_margin" android:background="@color/line_color_list_divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:drawableLeft="@drawable/ic_group"
            android:layout_marginTop="12dp"
            android:drawablePadding="17dp"
            style="@style/TextSNSMangeBig"
            android:text="@string/group"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/sns_manager_layout_margin"
            android:gravity="center_vertical|left">

            <LinearLayout
                android:id="@+id/ll_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical|left"/>

            <Button
                android:id="@+id/btn_group_more"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_add" />

        </LinearLayout>


        <View android:layout_width="match_parent" android:layout_height="1dp"
            android:layout_marginLeft="@dimen/sns_manager_layout_margin" android:background="@color/line_color_list_divider"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_plan_ttl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="17dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            style="@style/TextSNSMangeBig"
            android:drawableLeft="@drawable/ic_manage_plan"
            android:text="@string/plan"/>

        <LinearLayout
            android:id="@+id/ll_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp"/>

        <View android:layout_width="match_parent" android:layout_height="1dp"
            android:layout_marginLeft="@dimen/sns_manager_layout_margin" android:background="@color/line_color_list_divider"/>

    </LinearLayout>


    <RelativeLayout android:id="@+id/rl_file"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="17dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:drawableLeft="@drawable/ic_file"
            style="@style/TextSNSMangeBig"
            android:text="@string/file"/>

        <View android:layout_width="match_parent" android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/sns_manager_layout_margin"
            android:background="@color/line_color_list_divider"/>

    </RelativeLayout>

    <RelativeLayout android:id="@+id/rl_picture"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="?android:attr/selectableItemBackground"
        android:visibility="gone"
        android:clickable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="17dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:drawableLeft="@drawable/ic_picture"
            style="@style/TextSNSMangeBig"
            android:text="@string/picture"/>

        <View android:layout_width="match_parent" android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/sns_manager_layout_margin"
            android:background="@color/line_color_list_divider"/>

    </RelativeLayout>


</LinearLayout>